correcion web composer

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         {
             "name": "Alejandro Isla",
             "email": "willywes@hotmail.cl",
-            "homepage": "alejandroisla.cl"
+            "homepage": "http://alejandroisla.cl"
         }
     ],
     "homepage": "https://github.com/willywes/modulegenerator",
